@@ -1,6 +1,7 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - now checking for keyword collisions in custom vocabulary classes
 
 0.612     2025-06-03 22:50:17Z
           - additional diagnostics to track down some edge case failures
